# pdf2bpmn

./: .gitignore  PRD.md  README.md  pyproject.toml  run.py  start.sh
doc/: implementation.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/stores/: app.js
frontend/src/views/: EntitiesView.vue  HomeView.vue  ProcessView.vue
src/pdf2bpmn/: __init__.py  config.py
src/pdf2bpmn/api/: __init__.py  main.py
src/pdf2bpmn/extractors/: __init__.py  entity_extractor.py  pdf_extractor.py
src/pdf2bpmn/generators/: __init__.py  bpmn_generator.py  dmn_generator.py  skill_generator.py
src/pdf2bpmn/graph/: __init__.py  neo4j_client.py  vector_search.py
src/pdf2bpmn/models/: __init__.py  entities.py  state.py
src/pdf2bpmn/ui/: __init__.py  app.py
src/pdf2bpmn/workflow/: __init__.py  graph.py
tests/: __init__.py  test_bpmn_generation.py  test_chunk_integration.py
